bindings/flutter/lib/src/ffi_bindings.dart


final class baresdk_account_config_t extends Struct {
  external Pointer<Char> uri;
  external Pointer<Char> password;
  @Int32()
  external int transport;
  external Pointer<Char> server_host;
  @Uint16()
  external int server_port;
  external Pointer<Char> server_url;
  external Pointer<Char> auth_user;
  external Pointer<Char> display_name;
  @Int32()
  external int media_enc;
  @Bool()
  external bool ice_enabled;
  external Pointer<Char> stun_server;
  external Pointer<Char> turn_server;
  external Pointer<Char> turn_user;
  external Pointer<Char> turn_pass;
  external Pointer<Char> outbound;
  @Bool()
  external bool verify_tls;
}

// ── Bindings class ────────────────────────────────────────────────────────────

class BareSDKBindings {
  final DynamicLibrary _lib;

  BareSDKBindings(this._lib);

  late final Pointer<Utf8> Function() baresdk_version =
      _lib.lookupFunction<Pointer<Utf8> Function(), Pointer<Utf8> Function()>(
        'baresdk_version',
      );

  late final void Function(Pointer<baresdk_config_t>) baresdk_config_init =
      _lib.lookupFunction<
        Void Function(Pointer<baresdk_config_t>),
        void Function(Pointer<baresdk_config_t>)
      >('baresdk_config_init');

  late final int Function(Pointer<baresdk_config_t>) baresdk_init =
      _lib.lookupFunction<
        Int32 Function(Pointer<baresdk_config_t>),
        int Function(Pointer<baresdk_config_t>)
      >('baresdk_init');

  late final void Function() baresdk_shutdown =
      _lib.lookupFunction<Void Function(), void Function()>('baresdk_shutdown');

  late final int Function(Pointer<baresdk_account_config_t>, Pointer<Pointer<baresdk_account>>)
      baresdk_account_create = _lib.lookupFunction<
        Int32 Function(Pointer<baresdk_account_config_t>, Pointer<Pointer<baresdk_account>>),
        int Function(Pointer<baresdk_account_config_t>, Pointer<Pointer<baresdk_account>>)
      >('baresdk_account_create');

  late final void Function(Pointer<baresdk_account>) baresdk_account_destroy =
      _lib.lookupFunction<
        Void Function(Pointer<baresdk_account>),
        void Function(Pointer<baresdk_account>)
      >('baresdk_account_destroy');

  late final int Function(Pointer<baresdk_account>) baresdk_account_register =
      _lib.lookupFunction<
        Int32 Function(Pointer<baresdk_account>),
        int Function(Pointer<baresdk_account>)
      >('baresdk_account_register');

  late final int Function(Pointer<baresdk_account>) baresdk_account_unregister =
      _lib.lookupFunction<
        Int32 Function(Pointer<baresdk_account>),
        int Function(Pointer<baresdk_account>)
      >('baresdk_account_unregister');

  late final int Function(Pointer<baresdk_account>, int, int, double, int)
      baresdk_account_set_retry_policy = _lib.lookupFunction<
        Int32 Function(Pointer<baresdk_account>, Uint32, Uint32, Float, Uint32),
        int Function(Pointer<baresdk_account>, int, int, double, int)
      >('baresdk_account_set_retry_policy');

  late final int Function(Pointer<baresdk_account>) baresdk_account_cancel_retry =
      _lib.lookupFunction<
        Int32 Function(Pointer<baresdk_account>),
        int Function(Pointer<baresdk_account>)
      >('baresdk_account_cancel_retry');

  late final int Function(Pointer<baresdk_account>) baresdk_account_retry_now =
      _lib.lookupFunction<
        Int32 Function(Pointer<baresdk_account>),
        int Function(Pointer<baresdk_account>)
      >('baresdk_account_retry_now');

  late final int Function(Pointer<baresdk_account>, Pointer<Char>, Pointer<Char>)
      baresdk_account_add_header = _lib.lookupFunction<
        Int32 Function(Pointer<baresdk_account>, Pointer<Char>, Pointer<Char>),
        int Function(Pointer<baresdk_account>, Pointer<Char>, Pointer<Char>)
      >('baresdk_account_add_header');

  late final int Function(Pointer<baresdk_account>, Pointer<Char>)
      baresdk_account_subscribe_presence = _lib.lookupFunction<
        Int32 Function(Pointer<baresdk_account>, Pointer<Char>),
        int Function(Pointer<baresdk_account>, Pointer<Char>)
      >('baresdk_account_subscribe_presence');

  late final int Function(Pointer<baresdk_account>, Pointer<Char>)
      baresdk_account_unsubscribe_presence = _lib.lookupFunction<
        Int32 Function(Pointer<baresdk_account>, Pointer<Char>),
        int Function(Pointer<baresdk_account>, Pointer<Char>)
      >('baresdk_account_unsubscribe_presence');

  late final int Function(Pointer<baresdk_account>, Pointer<Char>, Pointer<Pointer<baresdk_call>>)
      baresdk_call_invite = _lib.lookupFunction<
        Int32 Function(Pointer<baresdk_account>, Pointer<Char>, Pointer<Pointer<baresdk_call>>),
        int Function(Pointer<baresdk_account>, Pointer<Char>, Pointer<Pointer<baresdk_call>>)
      >('baresdk_call_invite');

  late final int Function(Pointer<baresdk_call>) baresdk_call_answer =
      _lib.lookupFunction<
        Int32 Function(Pointer<baresdk_call>),
        int Function(Pointer<baresdk_call>)
      >('baresdk_call_answer');

  late final int Function(Pointer<baresdk_call>) baresdk_call_hangup =
      _lib.lookupFunction<
        Int32 Function(Pointer<baresdk_call>),
        int Function(Pointer<baresdk_call>)
      >('baresdk_call_hangup');

  late final int Function(Pointer<baresdk_call>) baresdk_call_hold =
      _lib.lookupFunction<
        Int32 Function(Pointer<baresdk_call>),
        int Function(Pointer<baresdk_call>)
      >('baresdk_call_hold');

  late final int Function(Pointer<baresdk_call>) baresdk_call_resume =
      _lib.lookupFunction<
        Int32 Function(Pointer<baresdk_call>),
        int Function(Pointer<baresdk_call>)
      >('baresdk_call_resume');

  late final int Function(Pointer<baresdk_call>, Uint8) baresdk_call_send_dtmf =
      _lib.lookupFunction<
        Int32 Function(Pointer<baresdk_call>, Uint8),
        int Function(Pointer<baresdk_call>, int)
      >('baresdk_call_send_dtmf');

  late final int Function(Pointer<baresdk_call>, Pointer<Char>) baresdk_call_transfer =
      _lib.lookupFunction<
        Int32 Function(Pointer<baresdk_call>, Pointer<Char>),
        int Function(Pointer<baresdk_call>, Pointer<Char>)
      >('baresdk_call_transfer');

  late final int Function(Pointer<baresdk_call>, Pointer<Char>, Pointer<Char>)
      baresdk_call_add_header = _lib.lookupFunction<
        Int32 Function(Pointer<baresdk_call>, Pointer<Char>, Pointer<Char>),
        int Function(Pointer<baresdk_call>, Pointer<Char>, Pointer<Char>)
      >('baresdk_call_add_header');

  late final int Function(Pointer<baresdk_call>, Pointer<baresdk_call>)
      baresdk_call_attended_transfer = _lib.lookupFunction<
        Int32 Function(Pointer<baresdk_call>, Pointer<baresdk_call>),
        int Function(Pointer<baresdk_call>, Pointer<baresdk_call>)
      >('baresdk_call_attended_transfer');

  late final int Function(
    Pointer<baresdk_account>,
    Pointer<Char>,
    Pointer<Char>,
    Pointer<Char>,
  ) baresdk_message_send = _lib.lookupFunction<
    Int32 Function(Pointer<baresdk_account>, Pointer<Char>, Pointer<Char>, Pointer<Char>),
    int Function(Pointer<baresdk_account>, Pointer<Char>, Pointer<Char>, Pointer<Char>)
  >('baresdk_message_send');

  late final int Function(Pointer<baresdk_account>, Int32)
      baresdk_account_publish_presence = _lib.lookupFunction<
        Int32 Function(Pointer<baresdk_account>, Int32),
        int Function(Pointer<baresdk_account>, int)
      >('baresdk_account_publish_presence');

  late final int Function(Pointer<baresdk_account>, Int32)
      baresdk_account_set_100rel = _lib.lookupFunction<
        Int32 Function(Pointer<baresdk_account>, Int32),
        int Function(Pointer<baresdk_account>, int)
      >('baresdk_account_set_100rel');

  late final int Function(Pointer<baresdk_call>, int) baresdk_audio_mute =
      _lib.lookupFunction<
        Int32 Function(Pointer<baresdk_call>, Bool),
        int Function(Pointer<baresdk_call>, int)
      >('baresdk_audio_mute');

  late final int Function(Pointer<baresdk_call>, int) baresdk_audio_mute_rx =
      _lib.lookupFunction<
        Int32 Function(Pointer<baresdk_call>, Bool),
        int Function(Pointer<baresdk_call>, int)
      >('baresdk_audio_mute_rx');

  late final int Function(Pointer<baresdk_audio_device_t>, int)
      baresdk_audio_list_input_devices = _lib.lookupFunction<
        Int32 Function(Pointer<baresdk_audio_device_t>, Int32),
        int Function(Pointer<baresdk_audio_device_t>, int)
      >('baresdk_audio_list_input_devices');

  late final int Function(Pointer<baresdk_audio_device_t>, int)
      baresdk_audio_list_output_devices = _lib.lookupFunction<
        Int32 Function(Pointer<baresdk_audio_device_t>, Int32),
        int Function(Pointer<baresdk_audio_device_t>, int)
      >('baresdk_audio_list_output_devices');

  late final int Function(Pointer<Char>) baresdk_audio_set_input_device =
      _lib.lookupFunction<
        Int32 Function(Pointer<Char>),
        int Function(Pointer<Char>)
      >('baresdk_audio_set_input_device');

  late final int Function(Pointer<Char>) baresdk_audio_set_output_device =
      _lib.lookupFunction<
        Int32 Function(Pointer<Char>),
        int Function(Pointer<Char>)
      >('baresdk_audio_set_output_device');

  late final int Function(Pointer<baresdk_call>, Pointer<NativeFunction>, Pointer<Void>)
      baresdk_call_set_media_tap = _lib.lookupFunction<
        Int32 Function(Pointer<baresdk_call>, Pointer<NativeFunction>, Pointer<Void>),
        int Function(Pointer<baresdk_call>, Pointer<NativeFunction>, Pointer<Void>)
      >('baresdk_call_set_media_tap');

  late final int Function(Pointer<baresdk_call>, Pointer<baresdk_ev_media_stats_t>)
      baresdk_call_get_stats = _lib.lookupFunction<
        Int32 Function(Pointer<baresdk_call>, Pointer<baresdk_ev_media_stats_t>),
        int Function(Pointer<baresdk_call>, Pointer<baresdk_ev_media_stats_t>)
      >('baresdk_call_get_stats');

  late final int Function(Pointer<Char>) baresdk_pcap_start = _lib.lookupFunction<
    Int32 Function(Pointer<Char>),
    int Function(Pointer<Char>)
  >('baresdk_pcap_start');

  late final int Function() baresdk_pcap_stop = _lib.lookupFunction<
    Int32 Function(),
    int Function()
  >('baresdk_pcap_stop');

  late final int Function(Pointer<baresdk_call>, Pointer<Char>)
      baresdk_call_record_start = _lib.lookupFunction<
        Int32 Function(Pointer<baresdk_call>, Pointer<Char>),
        int Function(Pointer<baresdk_call>, Pointer<Char>)
      >('baresdk_call_record_start');

  late final int Function(Pointer<baresdk_call>) baresdk_call_record_stop =
      _lib.lookupFunction<
        Int32 Function(Pointer<baresdk_call>),
        int Function(Pointer<baresdk_call>)
      >('baresdk_call_record_stop');
}
